[package]
name = "xlsx-csv"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT"
authors = ["Vivekanandan Muthaiyan<vivekmuthu1910@gmail.com>"]
keywords = ["xlsx", "csv"]
repository = "https://github.com/vivekmuthu1910/xlsx-csv"


[lib]
name = "xlsx_csv"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]
